tests/ui/errors/auto-impl.pattern.struct.stderr
error: `auto_impl` supports arguments only in the form of identifiers or the wildcard (`_`)
 --> tests/ui/errors/auto-impl.pattern.struct.rs:3:13
  |
3 |     fn test(Foo { a }: Foo) {
  |             ^^^^^^^^^^^^^^
